--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bob_website",
+  "name": "nextapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,11 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
