--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "embla-carousel-react": "^6.2.0",
     "global": "^4.4.0",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
