--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "embla-carousel-react": "^6.2.0",
     "global": "^4.4.0",
+    "mongoose": "^6.3.8",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
