--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
+    "cloudinary-react": "^1.7.2",
     "embla-carousel-react": "^6.2.0",
     "global": "^4.4.0",
     "mongoose": "^6.3.8",
