--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-image-magnify": "^2.7.4"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
