--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.3.8",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
+    "razorpay": "^2.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-image-magnify": "^2.7.4"
