--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.0.24",
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "cloudinary-react": "^1.7.2",
@@ -31,6 +39,19 @@
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "cloudinary-react": "^1.7.2",
+    "crypto": "^1.0.1",
+    "embla-carousel-react": "^6.2.0",
+    "global": "^4.4.0",
+    "mongoose": "^6.3.8",
+    "next": "12.1.6",
+    "next-auth": "^4.3.4",
+    "razorpay": "^2.8.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-image-magnify": "^2.7.4"
   }
 }
