--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "razorpay": "^2.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-image-magnify": "^2.7.4"
+    "react-image-magnify": "^2.7.4",
+    "@vercel/speed-insights": "1.0.10"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
